replaced with kotlin boilerplate

--- a/melanoma_classifier/app/src/main/res/values/strings.xml
+++ b/melanoma_classifier/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Melanoma Classifier</string>
+    <string name="app_name">melanoma_classifier</string>
 </resources>
